<?xml version="1.0" encoding="utf-8"?>
<!-- sms_event.xml -->
<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:paddingTop="4dip"
     android:paddingBottom="6dip"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">


<LinearLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal">
        
     <TextView android:id="@+id/tv_SN"
         android:text="@string/tv_SN" 
         android:layout_width="120dip"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:visibility="gone"
         />
 
     <TextView android:id="@+id/tv_NAME"
         android:text="@string/tv_NAME" 
         android:layout_width="70dip"
         android:layout_height="wrap_content" 
         android:gravity="center_horizontal"
         android:layout_weight="1"/>
 
     <TextView android:id="@+id/tv_PHONE_NUM"
         android:text="@string/tv_PHONE_NUM" 
         android:layout_width="100dip"
         android:layout_height="wrap_content" 
         android:gravity="center_horizontal" 
         android:visibility="gone"/>
         
     <TextView android:id="@+id/tv_DATETIME"
         android:text="@string/tv_DATETIME" 
         android:layout_width="140dip"
         android:layout_height="wrap_content"  
         android:gravity="center_horizontal"
         android:layout_weight="2"/>
         
     <TextView android:id="@+id/tv_SMS_DESC"
         android:text="@string/tv_SMS_DESC" 
         android:layout_width="130dip"
         android:layout_height="wrap_content" 
         android:gravity="center_horizontal" 
         android:layout_weight="1"/>
     
     <TextView android:id="@+id/tv_SEND_GEO"
         android:text="@string/tv_SEND_GEO"
         android:layout_width="100dip"
         android:layout_height="wrap_content" 
         android:gravity="center_horizontal" 
         android:layout_weight="1"/>
     
     <TextView android:id="@+id/tv_SEND_ME"
         android:text="@string/tv_SEND_ME"
         android:layout_width="100dip"
         android:layout_height="wrap_content" 
         android:gravity="center_horizontal" 
         android:layout_weight="1"
         android:visibility="gone"/>
         
     <TextView android:id="@+id/tv_LSTSENDDT"
         android:text="@string/tv_LSTSENDDT"
         android:layout_width="140dip"
         android:layout_height="wrap_content"  
         android:gravity="center_horizontal"
         android:layout_weight="2"/>
</LinearLayout>

            
<LinearLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal">
     

  
                  
     <TextView android:id="@+id/CELL_SN"
         android:layout_width="120dip"
         android:layout_height="wrap_content"
         android:visibility="gone"
         style="@style/Text_Yellow" 
         />
 
     <TextView android:id="@+id/CELL_NAME"
         android:layout_width="70dip"
         android:layout_height="wrap_content" 
         android:layout_weight="1"
         style="@style/Text_Yellow" />
         
     <TextView android:id="@+id/CELL_PHONE_NUM"
         android:layout_width="100dip"
         android:layout_height="wrap_content"  
         android:visibility="gone"
         style="@style/Text_Yellow" />
         
     <TextView android:id="@+id/CELL_DATETIME"
         android:layout_width="140dip"
         android:layout_height="wrap_content"  
         android:layout_weight="2"
         style="@style/Text_Yellow" />
         
     <TextView android:id="@+id/CELL_SMS_DESC"
         android:gravity="center"
         android:layout_width="130dip"
         android:layout_height="wrap_content"  
         android:layout_weight="1"
         style="@style/Text_Yellow" />
     
     <TextView android:id="@+id/CELL_SEND_GEO"
         android:layout_width="100dip"
         android:layout_height="wrap_content"  
         android:gravity="center_horizontal"
         android:layout_weight="1"
         style="@style/Text_Yellow" />
     
     <TextView android:id="@+id/CELL_SEND_ME"
         android:layout_width="100dip"
         android:layout_height="wrap_content"  
         android:gravity="center_horizontal"
         android:layout_weight="1"
         android:visibility="gone"
         style="@style/Text_Yellow" />
         
     <TextView android:id="@+id/CELL_LSTSENDDT"
         android:layout_width="140dip"
         android:layout_height="wrap_content"  
         android:layout_weight="2"
         style="@style/Text_Yellow" />
         


</LinearLayout>

</LinearLayout>