<?xml version="1.0" encoding="utf-8"?>
<!-- sms_event.xml -->
<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:paddingTop="4dip"
     android:paddingBottom="6dip"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">


<LinearLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal">
         
     <TextView android:id="@+id/tv_SELECT"
         android:text="@string/tv_SELECT" 
         android:layout_width="80dip"
         android:layout_height="wrap_content" 
         android:gravity="center_horizontal" 
         android:layout_weight="2"/>
            
     <TextView android:id="@+id/tv_SN"
         android:text="@string/tv_SN" 
         android:layout_width="120dip"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:visibility="gone"
         />
 
 	<TextView android:id="@+id/tv_DATETIME"
         android:text="@string/tv_DATETIME" 
         android:layout_width="100dip"
         android:layout_height="wrap_content" 
         android:gravity="center_horizontal" 
         android:layout_weight="2"/>
         
     <TextView android:id="@+id/tv_ENC_FLG"
         android:text="@string/tv_ENC_FLG" 
         android:layout_width="50dip"
         android:layout_height="wrap_content" 
         android:gravity="center_horizontal"
         android:visibility="gone"
         android:layout_weight="1"/>
 
     <TextView android:id="@+id/tv_SENDER"
         android:text="@string/tv_SENDER" 
         android:layout_width="100dip"
         android:layout_height="wrap_content" 
         android:gravity="center_horizontal" 
         android:layout_weight="2"/>
         
     <TextView android:id="@+id/tv_FILE_NAME"
         android:text="@string/tv_FILE_NAME" 
         android:layout_width="130dip"
         android:layout_height="wrap_content" 
         android:gravity="center_horizontal" 
         android:layout_weight="1"/>
 
     <TextView android:id="@+id/tv_KEY"
         android:text="@string/tv_KEY" 
         android:layout_width="100dip"
         android:layout_height="wrap_content"  
         android:gravity="center_horizontal"
         android:visibility="gone"/>
         
     <TextView android:id="@+id/tv_SMS"
         android:text="@string/tv_KEY" 
         android:layout_width="100dip"
         android:layout_height="wrap_content"  
         android:gravity="center_horizontal"
         android:visibility="gone"/>
     
    
</LinearLayout>

            
<LinearLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal">
     
     <CheckBox android:id="@+id/CELL_SELECT"
         android:layout_width="80dip"
         android:layout_height="wrap_content" 
         android:gravity="center_horizontal" 
         android:focusable="false"
         android:layout_weight="2"/>
   
     <TextView android:id="@+id/CELL_SN"
         android:layout_width="120dip"
         android:layout_height="wrap_content"
         android:visibility="gone"
         style="@style/Text_Yellow" 
         />
 
     <TextView android:id="@+id/CELL_DATETIME"
         android:layout_width="100dip"
         android:layout_height="wrap_content"  
         android:layout_weight="2"
         style="@style/Text_Yellow" />
         
     <TextView android:id="@+id/CELL_ENC_FLG"
         android:layout_width="50dip"
         android:layout_height="wrap_content" 
         android:layout_weight="1"
         android:visibility="gone"
         style="@style/Text_Yellow" />
         
     <TextView android:id="@+id/CELL_SENDER"
         android:layout_width="100dip"
         android:layout_height="wrap_content"  
         android:layout_weight="2"
         style="@style/Text_Yellow" />
         
     <TextView android:id="@+id/CELL_FILE_NAME"
         android:layout_width="130dip"
         android:layout_height="wrap_content"  
         android:layout_weight="1"
         style="@style/Text_Yellow" />
         
     <TextView android:id="@+id/CELL_KEY"
         android:layout_width="100dip"
         android:layout_height="wrap_content"  
         android:layout_weight="2"
         android:visibility="gone"
         style="@style/Text_Yellow" />
         
     <TextView android:id="@+id/CELL_SMS"
         android:layout_width="100dip"
         android:layout_height="wrap_content"  
         android:layout_weight="2"
         android:visibility="gone"
         style="@style/Text_Yellow" />

</LinearLayout>

</LinearLayout>